made the numbers transparent

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
   #grid div {
     display: flex;
+    color: transparent;
     justify-content: center;
     align-items: center;
     font-size: 2rem;
